[package]
name = "ckb-mmr-wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "ckb_mmr_wasm"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ckb-mmr-wasm"
path = "src/main.rs"

[dependencies]
ckb-merkle-mountain-range = "0.5.0"
sha2 = "0.10.8"
hex = "0.4.3"
blake2b_simd = "0.5.11"
wasm-bindgen = "0.2.99"
js-sys = "0.3"


